--- a/apps/server-example/.env.development
+++ b/apps/server-example/.env.development
@@ -2,4 +2,5 @@ NODE_ENV=development
 
 DATABASE_URL=postgresql://server_example:server_example_password@localhost/server_example
 
-JWT_SECRET=af621babf9f489e6014724e929bb8211
+API_CLIENT_BASE_URL=http://localhost:3001
+API_BASE_URL=http://localhost:3101
