--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -30,6 +30,7 @@
 		"@t3-oss/env-core": "^0.13.8",
 		"drizzle-orm": "^0.44.6",
 		"elysia": "catalog:",
+		"jose": "^5.9.6",
 		"lodash-es": "^4.17.21",
 		"pg": "^8.16.3",
 		"zod": "catalog:"
