--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -20,11 +20,14 @@
 	},
 	"dependencies": {
 		"@daveyplate/better-auth-ui": "^3.2.5",
+		"@elysiajs/eden": "^1.4.1",
 		"@packages/ui": "workspace:*",
 		"@t3-oss/env-nextjs": "^0.13.8",
 		"@tanstack/react-query": "^5.90.2",
+		"@types/bun": "catalog:",
 		"better-auth": "^1.3.27",
 		"drizzle-orm": "^0.44.6",
+		"elysia": "catalog:",
 		"lucide-react": "^0.544.0",
 		"next": "catalog:",
 		"next-themes": "^0.4.6",
