--- a/packages/cluster/package.json
+++ b/packages/cluster/package.json
@@ -10,6 +10,6 @@
 		"clean": "rm -rf .turbo node_modules",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
-		"type:check": "tsc -p tsconfig.json --noEmit"
+		"type:check": "tsc --noEmit"
 	}
 }
