--- a/packages/cluster/tsconfig.json
+++ b/packages/cluster/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "@packages/typescript-config/base.json",
 	"compilerOptions": {
-		"outDir": "dist"
+		"baseUrl": ".",
 	},
 	"include": ["src"]
 }
