--- a/packages/events/package.json
+++ b/packages/events/package.json
@@ -8,7 +8,9 @@
 	},
 	"scripts": {
 		"clean": "rm -rf .turbo node_modules",
-		"type:check": "tsc -p tsconfig.json --noEmit"
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"type:check": "tsc --noEmit"
 	},
 	"devDependencies": {
 		"zod": "catalog:"
